# lark-vm

./: Cargo.toml
examples/: ill-instr.lark.asm
src/: cli.rs  cpu.rs  decode.rs  exn_codes.rs  lib.rs  log.rs  main.rs  opcodes.rs  utils.rs
src/analysis/: defs_uses.rs  mod.rs  stg_loc.rs
src/cpu/: debugger.rs  decode.rs  dex.rs  exn_codes.rs  instr.rs  interrupts.rs  opcodes.rs  regs.rs
src/tui/: mod.rs  utils.rs
