[package]
name = "lark-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = "0.5.34"
yansi = "1.0.0-rc.1"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["atomic", "alloc"]
